--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-    <title>OS Svelte App</title>
+    <title>Painting Utterly Brilliant Britain</title>
 
     <link
       rel="apple-touch-icon"
